# ai-agents-crew-ai-apps

./: .gitignore
ai-agents-crew-ai-apps/content_marketing_project_manager/: .env.example  IMPROVEMENTS.md  README.md
ai-agents-crew-ai-apps/sales_development_representative_agent/backend/: .env.example
ai-agents-crew-ai-apps/sales_development_representative_agent/frontend/: .gitignore  package.json
ai-agents-crew-ai-apps/sales_development_representative_agent/scripts/: setup.sh
ai-agents-crew-ai-apps/sales_pitch_assistant/: README.md  package.json  start.sh
ai-agents-crew-ai-apps/sales_pitch_assistant/api/: package.json  server.js
ai-agents-crew-ai-apps/sales_pitch_assistant/backend/: README.md  api_server.py  env.example  main.py  requirements.txt  test_setup.py
ai-agents-crew-ai-apps/sales_pitch_assistant/frontend/: package.json
ai-saas-competitor-analyzer/: README.md  package-lock.json  package.json  requirements.txt
ai-saas-competitor-analyzer/app/: agents.py  crews.py  main.py  models.py  page.tsx  settings.py  tools.py  tools_playwright.py
claude-const-maximizer/: CURSOR_RULES.md  README.md  SERVICES_SIGNUP_CHECKLIST.md  SHOPPING_LIST.md  SPECIALIZED_SERVICES_ANALYSIS.md  WAR_PREPARATION_SUMMARY.md  archetypes.json  envs.json  projects.json  projects_sample.json  setup.ps1  tagged_projects.json
claude-const-maximizer/backend/: PHASE2_3_SUMMARY.md  README.md  api_routes.py  auto_optimizer.py  bootstrap_results.json  check_results.py  cleanup_emojis.py  debug_500_error.py  debug_pipeline.py  debug_project_id.py  debug_project_ids.py  debug_report_structure.py  debug_test.py  direct_result_pipeline.py  env.example  main.py  phase3_research_prompt_code.py  pipeline_integration_manager.py  pipeline_status.json  process_all_projects_quality.py  process_first_project.py  process_remaining_projects.py  requirements.txt  run_all.py  run_single_project_real.py  simple_integration_test.py  simple_test.py  test_all_60_projects.py  test_complete_project.py  test_crewai_integration.py  test_existing_result.py  test_final_output.py  test_integrated_system.py  test_psychological_approach.py  test_rag_project.py  test_single_project.py
claude-const-maximizer/backend/boilerplates/: README.md
claude-const-maximizer/backend/crew_app/: crew.py  expert_profiles.py
claude-const-maximizer/backend/direct_results/: ai-content-localizer_result.json  ai-driven-music-composition-tool_result.json  ai-email-campaign-writer_result.json  ai-meeting-notes-and-action-items_result.json  ai-powered-code-review-and-refactoring-assistant_result.json  ai-powered-interactive-storybook-creator_result.json  ai-powered-legal-document-analysis-and-contract-negotiation_result.json  ai-powered-medical-diagnosis-assistant_result.json  (+54 more)
claude-const-maximizer/deliverables/: phase3_progress.json
claude-const-maximizer/frontend/: README.md
claude-const-maximizer/scripts/: progress_dashboard.py
content_marketing_project_manager/: README.md  pyproject.toml  run.bat  run.sh
content_marketing_project_manager/tests/: test_crew.py
email-agent-project/: .gitignore  README.md  setup.py
email-agent-project/backend/: pyproject.toml  test_setup.py
email-agent-project/backend/agents/crews/: email_filter_crew.py
email-agent-project/backend/agents/crews/config/: agents.yaml  tasks.yaml
email-agent-project/backend/agents/flows/: email_flow.py
email-agent-project/backend/agents/tools/: draft_tool.py  gmail_tool.py  search_tool.py
email-agent-project/backend/api/: main.py
email-agent-project/backend/api/middleware/: auth.py
email-agent-project/backend/api/routes/: agents.py  auth.py  drafts.py  emails.py
email-agent-project/backend/api/websockets/: email_stream.py
email-agent-project/backend/models/: email.py
email-agent-project/backend/services/: agent_service.py  analytics_service.py  draft_service.py  email_service.py  queue_service.py
email-agent-project/docker/: Dockerfile.backend  Dockerfile.frontend
email-agent-project/docs/: SETUP.md
email-agent-project/frontend/: next.config.js  package.json
email-agent-project/scripts/: start-dev.sh
sales_development_representative_agent/: AI_WORKFLOW_DIAGRAM.md  AI_WORKFLOW_SCENARIO.md  README.md  STATUS_SUMMARY.md  TESTING_GUIDE.md  USER_GUIDE.md  test_leads.csv
sales_development_representative_agent/backend/: pyproject.toml  requirements.txt  run.py  test_api.py
sales_development_representative_agent/backend/src/sdr_assistant_flow/: lead_types.py  main.py
sales_development_representative_agent/backend/src/sdr_assistant_flow/api/models/: api_models.py
sales_development_representative_agent/backend/src/sdr_assistant_flow/api/routes/: emails.py  leads.py
sales_development_representative_agent/backend/src/sdr_assistant_flow/crews/analyze_customer_profile_crew/: analyze_customer_profile_crew.py
sales_development_representative_agent/backend/src/sdr_assistant_flow/crews/analyze_customer_profile_crew/config/: agents.yaml  tasks.yaml
sales_development_representative_agent/backend/src/sdr_assistant_flow/crews/draft_cold_email_crew/: __init__.py  draft_cold_email_crew.py
sales_development_representative_agent/backend/src/sdr_assistant_flow/crews/draft_cold_email_crew/config/: agents.yaml  tasks.yaml
sales_development_representative_agent/backend/src/sdr_assistant_flow/tools/: email_validator_tool.py  linkedin_tool.py
sales_development_representative_agent/backend/src/sdr_assistant_flow/utils/: config.py  database.py
sales_development_representative_agent/frontend/: README.md  package-lock.json
sales_pitch_assistant/: start.bat
sales_pitch_assistant/backend/: env.example  main.py  pyproject.toml  setup.py  test_setup.py
sales_pitch_assistant/backend/config/: agents.yaml  tasks.yaml
sales_pitch_assistant/backend/db/: chroma.sqlite3
sales_pitch_assistant/backend/outputs/: sales_meeting_prep_microsoft_2025-08-12_11-12.md  sales_meeting_prep_salesforce_2025-08-12_08-31.md  sales_meeting_prep_salesforce_2025-08-12_08-52.md
sales_pitch_assistant/frontend/: package-lock.json  tailwind.config.js
(+1151 files in other folders)
